# fastapi-kafka-producer

./: .gitignore  README.md  pyproject.toml
app/: .env.template  config.py  main.py
app/producer/: user_analytics_producer.py
app/websocket/: manager.py
